# Graphic-Editor

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  paint.cpp  paint.h  res.qrc
